--- a/prototype/website/src/game-app/ui/game-menu.html
+++ b/prototype/website/src/game-app/ui/game-menu.html
@@ -47,7 +47,7 @@
             }
 
             _characters(e) {
-                window.game.onScriptShutdown();
+                game.scriptShutdown();
                 application.scriptShutdown();
                 application.showCharacters();
             }
