reset cooldown bar faster + request at least 120FPS from pixi.

--- a/prototype/website/src/game-app/ui/spell-bar.html
+++ b/prototype/website/src/game-app/ui/spell-bar.html
@@ -214,6 +214,7 @@
                         setTimeout(() => {
                             bar.style.visibility = 'hidden';
                             bar.value = 0;
+                            bar.style.setProperty('--paper-progress-transition-duration', '0s');
                         }, ms);
                     });
 
