--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -17,18 +17,21 @@
     <title></title>
     <style>
         @keyframes fadein {
-                from {
-                    opacity: 0;
-                }
-                to {
-                    opacity: 1;
-                }
+            from {
+                opacity: 0;
             }
+            to {
+                opacity: 1;
+            }
+        }
     </style>
+    <script>
+        Polymer.passiveTouchGestures = true
+    </script>
 </head>
 <body style="position: absolute;" oncontextmenu="return application.development.rightClick;">
 
-    <app-view></app-view>
+<app-view></app-view>
 
 </body>
 </html>
