--- a/prototype/website/src/game-app/ui/spell-bar.html
+++ b/prototype/website/src/game-app/ui/spell-bar.html
@@ -178,7 +178,7 @@
 
     </template>
     <script>
-        class SpellBar extends Polymer.MutableData(Polymer.Element) {
+        class SpellBar extends Polymer.GestureEventListeners(Polymer.Element) {
 
             static get is() {
                 return 'spell-bar';
