--- a/prototype/website/src/game-app/ui/game-dialog.html
+++ b/prototype/website/src/game-app/ui/game-dialog.html
@@ -23,6 +23,7 @@
                 top: 50%;
                 transform: translate(-50%, -50%);
                 min-width: 428px;
+                max-width: 428px;
                 z-index: 999;
             }
 
@@ -46,16 +47,18 @@
                 display: block;
                 padding-left: 16px;
                 height: 76px;
+                font-size: small;
                 color: var(--paper-grey-300);
             }
 
             .dialog-option {
                 display: block;
+                font-size: small;
             }
 
             .dialog-option:hover {
-                color: #ff00cc;
                 cursor: pointer;
+                color: var(--player-class-theme);
             }
 
             .dialog-option-list {
