applied player-class-theme to icons in the game-ui.

--- a/prototype/website/src/game-app/ui/game-dialog.html
+++ b/prototype/website/src/game-app/ui/game-dialog.html
@@ -65,6 +65,10 @@
                 list-style-type: none;
             }
 
+            #dialog-close:hover {
+                color: var(--player-class-theme);
+            }
+
             #dialog-close {
                 position: absolute;
                 right: 8px;
