--- a/prototype/website/src/game-app/ui/game-menu.html
+++ b/prototype/website/src/game-app/ui/game-menu.html
@@ -16,6 +16,10 @@
             :host {
             }
 
+            .menu-icon:hover {
+                color: var(--player-class-theme);
+            }
+
             .interface-box {
                 cursor: pointer;
                 position: absolute;
