--- a/prototype/website/src/game-app/realm-list.html
+++ b/prototype/website/src/game-app/realm-list.html
@@ -201,8 +201,8 @@
 
 
             <paper-tabs id="tabs" selected="{{page}}" no-slide link>
-                <paper-tab on-down="trusted">Public</paper-tab>
-                <paper-tab on-down="untrusted">Private</paper-tab>
+                <paper-tab on-down="trusted">Development</paper-tab>
+                <!--<paper-tab on-down="untrusted">Public</paper-tab>-->
             </paper-tabs>
 
             <div hidden="{{trustedservers}}" class="mod-warning">
